--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     border: none;
 }
+
 body {
     font-family: Lato, sans-serif;
     font-weight: 300;
@@ -250,7 +251,7 @@ height: 150px;
 
 /* Media queries */
 
-/* For lager to medium screens size from 1200px wide and down */
+/* For larger to medium screens size from 1200px wide and down */
 @media screen and (max-width: 1200px) {
     #club-ethos {
         width: 65%;
@@ -259,7 +260,7 @@ height: 150px;
     }
 
     #welcome {
-        padding: 30px;
+        padding: 30px 0;
         margin: 0;
     }
 
@@ -278,4 +279,16 @@ height: 150px;
     hr {
         display: none;
     }
+}
+
+/* For medium screen sizes from 950px wide and down */
+@media screen and (max-width: 950px) {
+    
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    } 
 }
