--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,6 +276,14 @@ height: 150px;
         float: left;
         padding: 0;
     }
+
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
+
     hr {
         display: none;
     }
